# AI-Multi-Account-Manager

./: .gitignore  Cargo.toml  Lancer AI Manager.bat  Lancer AI Manager.command  Setup Firewall.bat  TESTS.md  _build.bat  build-windows.ps1  launch-linux.sh
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: accounts.rs  capture.rs  config.rs  credentials.rs  error.rs  event_log.rs  lib.rs  models.rs  oauth.rs  profiles.rs  quota.rs  routing.rs  stats.rs  switch_controller.rs  types.rs  validator.rs  webhook.rs
crates/daemon/: Cargo.toml  ai-manager-daemon.service
crates/daemon/src/: dto.rs  lib.rs  main.rs  refresh_loop.rs  watchdog.rs
crates/daemon/src/http_api/: accounts.rs  config.rs  credentials.rs  integrations.rs  mod.rs  monitoring.rs  profiles.rs  proxy.rs  ssh.rs  stats.rs  sync.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: api_usage.rs  body_rewriter.rs  cc_profile.rs  client_signatures.rs  credentials.rs  handler.rs  impersonation.rs  lib.rs  main.rs  model_mapping.rs  outbound_validator.rs  rate_limiter.rs  server.rs  session_writer.rs  sse_reassemble.rs  sse_translator.rs
crates/sync/: Cargo.toml
crates/sync/src/: bus.rs  compat.rs  coordinator.rs  discovery.rs  error.rs  failure_detector.rs  lib.rs  messages.rs  outbox.rs  ssh.rs
tauri-app/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
tauri-app/src/: App.svelte  app.css  main.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  state.rs
tauri-app/src/__tests__/: accounts.test.ts  config.test.ts  setup.ts  tauri-ipc.test.ts  toast.test.ts  types.test.ts
tauri-app/src/components/: Sidebar.svelte  StatusBar.svelte  Toast.svelte
tauri-app/src/components/accounts/: AccountCard.svelte  AccountList.svelte  QuotaRing.svelte
tauri-app/src/components/monitoring/: BackoffChart.svelte  CostPanel.svelte  LogViewer.svelte  PeerTopology.svelte  QuotaChart.svelte  RequestFeed.svelte  SessionList.svelte  SwitchHistory.svelte
tauri-app/src/components/proxy/: ImpersonationProfiles.svelte  ModelMapping.svelte  ProxyControl.svelte  ProxyInstanceCard.svelte  StrategySelector.svelte
tauri-app/src/components/settings/: AlertSettings.svelte  GeneralSettings.svelte  NetworkSettings.svelte  ProviderSettings.svelte  SettingsLayout.svelte
tauri-app/src/components/ui/: Badge.svelte  Button.svelte  Card.svelte  Dialog.svelte  ErrorState.svelte  Skeleton.svelte  Toggle.svelte  Tooltip.svelte
tauri-app/src/lib/: index.ts  tauri.ts  types.ts
tauri-app/src/lib/i18n/: index.ts
tauri-app/src/lib/i18n/locales/: en.json  fr.json
tauri-app/src/lib/stores/: accounts.ts  config.ts  proxy.ts  sync.ts  theme.ts  toast.ts
tauri-app/src/routes/: Accounts.svelte  Monitoring.svelte  Proxy.svelte  Settings.svelte
