[package]
name = "core"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
dirs = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
tokio-stream = { workspace = true }
regex-lite = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
