[package]
name = "proxy"
version.workspace = true
edition.workspace = true

[lib]
name = "proxy"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "anthrouter"
path = "src/main.rs"

[dependencies]
ai-core = { path = "../core", package = "core" }
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"
